# frodo

./: README.md
Src/: 1541d64.cpp  1541d64.h  1541fs.cpp  1541job.cpp  C64.cpp  C64.h  C64_WIN32.h  C64_x.h  CIA.h  CPU1541.h  CPUC64.h  CPUC64_SC.cpp  Display.cpp  Display.h  Display_SDL.h  Display_WIN32.h  Display_x.h  Frodo.rc  IEC.cpp  IEC.h  Makefile.WIN32  Makefile.in  Prefs.cpp  Prefs.h  Prefs_WIN32.h  Prefs_glade.h  Prefs_x.h  REU.cpp  SAM.cpp  SID.cpp  SID_WIN32.h  SID_linux.h  VIC.h  VIC_SC.cpp  build.bat  configure.ac  main.cpp  main.h  main_x.h  ndir.c  (+6 more)
Src/glade/: Frodo.glade
